[tool.poetry]
name = "pdf2bsml"
version = "0.0.1"
description = "Extract signals from traces stored as vector graphics on PDF files"
authors = ["David Brooks <d.brooks@auckland.ac.nz>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
biosignalml = {url = "https://github.com/BioSignalML/biosignalml-python/releases/download/v0.7.1-a.2/biosignalml-0.7.1a2-py3-none-any.whl"}
numpy = "^1.26.1"
pypdf = "^3.16.4"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
